updated to print HTTP URL to access Apache Server as Output

--- a/cloudFormationTemplate.yml
+++ b/cloudFormationTemplate.yml
@@ -41,3 +41,9 @@ Outputs:
   ubuntuServerPublicIP:
     Description: Public IP of EC2 Server to Acees fro Internet
     Value: !GetAtt ubuntuServer.PublicIp
+  httpUrl: 
+    Description: URL to Access HTTPD Running on Server
+    Value: !Join
+      - ''
+      - - 'http://'
+        - !GetAtt ubuntuServer.PublicDnsName
